-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1, 6.8.2
-
Windows 10 22H2, Qt Creator 14.0.2, MSVC 2022 x64
-
9b5ef8647 (6.8), e7114956a (16.0)
The attached project has this structure:
. ├── CMakeLists.txt ├── MyApp │ ├── CMakeLists.txt │ ├── Main.qml │ ├── main.cpp └── MyLib ├── CMakeLists.txt └── GreenRect.qml
Additionally, it uses:
- set(QT_QML_GENERATE_QMLLS_INI ON)
- qt_standard_project_setup(REQUIRES 6.8)
- qt_add_qml_module(appMyApp IMPORTS TARGET MyLib ...)
The attached project contains my .qmlls.ini files for inspection.
Steps to reproduce
- Ensure that qmlls is enabled
- Build and run the attached project, including the "all_qmllint" target
- Quit and then re-launch Qt Creator
- Load the same project and open Main.qml in the editor
Outcomes
- (Step #2) qmllint reports no problems (Expected)
- (Step #2) The project runs fine (Expected)
- (Step #4) qmlls can find the module from "import MyLib" (Expected)
- (Step #4) qmlls cannot find the GreenRect type; restarting qmlls does not change anything (Not Expected)
- is duplicated by
-
QTBUG-133586 F2 shortcut or Ctrl+Click in qml files sometimes leads to build dir instead of source and sometimes does absolutly nothing
-
- Need More Info
-
For Gerrit Dashboard: QTBUG-132263 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
623806,3 | qmlls: read import paths from .qmlls.ini | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | +1 |
623818,3 | qmlls: add build folder as import path | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |