qmlls: add build folder as import path

Work around QTBUG-132263 where qmlls from 6.8.2 doesn't read the
necessary .qrc files, and add the build folder (that contains all the
.qrc files) as import path for qmlls to find them.

This fixes qmlls not going to definition because of the ignored .qrc
files.

Task-number: QTBUG-132263
Change-Id: Ia0a8821a46c0cfba1767b0dea5761735ea28af06
Reviewed-by: David Schulz <david.schulz@qt.io>